--- a/hwApril1.Web/Views/Shared/_Layout.cshtml
+++ b/hwApril1.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - hwApril1.Web</title>
+    <title>@ViewData["Title"] - QA Site</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/hwApril1.Web.styles.css" asp-append-version="true" />
